--- a/src/references.bib
+++ b/src/references.bib
@@ -94,3 +94,16 @@
   month         = jul,
   pages         = {325–328}
 }
+@article{grover2,
+  title         = {Fixed-Point Quantum Search},
+  volume        = {95},
+  issn          = {1079-7114},
+  url           = {http://dx.doi.org/10.1103/PhysRevLett.95.150501},
+  doi           = {10.1103/physrevlett.95.150501},
+  number        = {15},
+  journal       = {Physical Review Letters},
+  publisher     = {American Physical Society (APS)},
+  author        = {Grover,  Lov K.},
+  year          = {2005},
+  month         = oct
+}
